--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,20 +23,19 @@ services:
       - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
     networks:
       - monitoring
-
   prometheus:
-    image: prom/prometheus:latest
-    container_name: prometheus
-    restart: unless-stopped
+    image: prom/prometheus
     volumes:
-      - ./prometheus.yml:/root/prom/prometheus.yml
+      - ./prometheus/:/etc/prometheus/
       - prometheus_data:/prometheus
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
-      - '--web.console.libraries=/etc/prometheus/console_libraries'
-      - '--web.console.templates=/etc/prometheus/consoles'
-      - '--web.enable-lifecycle'
+      - '--web.console.libraries=/usr/share/prometheus/console_libraries'
+      - '--web.console.templates=/usr/share/prometheus/consoles'
+
+    container_name: prometheus
+    restart: unless-stopped
     networks:
       - monitoring
 
@@ -50,13 +49,20 @@ services:
       - '--openvpn.status_paths=/etc/openvpn_exporter/server.status'
     networks:
       - monitoring
-      
+
   nginxexporter:
     image: nginx/nginx-prometheus-exporter
     container_name: nginx-exporter
     restart: unless-stopped
     command:
-      - 'nginx.scrape-uri=http://localhost:80/stats'
+      - '-nginx.scrape-uri=http://localhost:80/stats'
+    networks:
+      - monitoring
+
+  grafana:
+    image: grafana/grafana    
+    restart: unless-stopped
+    container_name: grafana
     networks:
       - monitoring
 
